--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+.material-symbols-rounded {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+
 .section_title {
     cursor: pointer;
     border-bottom: 1px solid black;
@@ -20,9 +29,11 @@ body {
     border-left: 1px dashed gray;
     padding-left: 1em;
 }
+
 .section_view.colapsed .section_content {
     display: none;
 }
+
 .section_view.checked {
     color: grey;
     text-decoration: line-through;
@@ -34,10 +45,6 @@ body {
     font-weight: bold;
 }
 
-.section_check::before {
-    content: " ● ";
-}
-
 .section_check.checked {
     color: grey;
     text-decoration: line-through;
@@ -45,9 +52,6 @@ body {
     font-weight: lighter;
 }
 
-.section_check.checked::before {
-    content: " ✓ ";
-}
 
 .section_check.ignored::before {
     content: " ◌ ";
