--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,24 @@ body {
   'opsz' 24
 }
 
+.interactive {
+    box-shadow: 3px 4px 0px rgba(128, 128, 128, 0.5);
+    cursor: pointer;
+}
+
+.interactive:hover{
+    box-shadow: 1px 2px 0px rgba(128, 128, 128, 0.5);
+}
+
+.interactive:active, .interactive:focus, .interactive[focused="true"]{
+    box-shadow: 1px 1px 0px rgba(128, 128, 128, 0.5);
+}
+
+.interactive:disabled, .interactive[disabled]{
+    opacity: 0.5;
+    box-shadow: 0px 0px 0px black;
+    cursor: not-allowed;
+}
 
 .section_title {
     border-bottom: 1px solid black;
