--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
     font-size: medium;
 }
 
-.section_check.checked {
+.section_check.checked, .section_title.checked {
     color: grey;
     text-decoration: line-through;
     list-style-type: none;
