--- a/src/index.css
+++ b/src/index.css
@@ -43,12 +43,12 @@ body {
 
 .interactive:active,
 .interactive:focus,
-.interactive[focused="true"] {
+.interactive[data-focused="true"] {
     box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
 }
 
 .interactive:disabled,
-.interactive[disabled] {
+.interactive[data-disabled="true"] {
     opacity: 0.5;
     box-shadow: 0px 0px 0px black;
     cursor: not-allowed;
