--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+a {
+    color: var(--text-primary);
+}
+
 .App {
     background-color: var(--background);
 }
