--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@import url("https://fonts.googleaypis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
+    --background: #f4f2f4;
     --text-primary: black;
     --filled-text-primary: white;
     --background-primary: #433d9d;
@@ -14,6 +15,7 @@
 }
 
 [data-theme="dark"] {
+    --background: url('/ocean.png') repeat 126px 126px;
     --text-primary: white;
     --filled-text-primary: white;
     --background-primary: #433d9d;
@@ -24,9 +26,6 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    background-image: url('/ocean.png');
-    background-repeat: repeat;
-    background-size: 126px 126px;
 }
 
 a {
