--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
-    --background: #f4f2f4;
+    --background: #bcd2d0;
     --text-primary: black;
     --filled-text-primary: white;
     --background-primary: #433d9d;
@@ -87,4 +87,21 @@ a {
     text-decoration: line-through;
     list-style-type: none;
     font-weight: lighter;
+}
+
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 30px; 
+    background: #333;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+  }
+
+#footer a {
+    color: var(--useful_item);
 }
