--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,18 @@
     --background-secondary: #48799e;
     --background-tertiary: #afb5af;
     --background-danger: #e82a00;
-    --useful_item: #6D8BE8;
-    --normal_item: #00EEEE;
-    --progression_item: #AF99EF;
-    --trap_item: #FA8072;
+    --black: #000000;
+    --red: #EE0000;
+    --green: #00FF7F;
+    --yellow: #FAFAD2;
+    --blue: #6495ED;
+    --magenta: #EE00EE;
+    --cyan: #00EEEE;
+    --slateblue: #6D8BE8;
+    --plum: #AF99EF;
+    --salmon: #FA8072;
+    --white: #FFFFFF;
+    --orange: #FF7700;
 }
 
 [data-theme="dark"] {
@@ -22,6 +30,18 @@
     --background-secondary: #48799e;
     --background-tertiary: #afb5af;
     --background-danger: #e82a00;
+    --black: #000000;
+    --red: #EE0000;
+    --green: #00FF7F;
+    --yellow: #FAFAD2;
+    --blue: #6495ED;
+    --magenta: #EE00EE;
+    --cyan: #00EEEE;
+    --slateblue: #6D8BE8;
+    --plum: #AF99EF;
+    --salmon: #FA8072;
+    --white: #FFFFFF;
+    --orange: #FF7700;
 }
 
 body {
@@ -88,3 +108,7 @@ a {
     list-style-type: none;
     font-weight: lighter;
 }
+
+/* * {
+    outline: 1px solid #f00 !important;
+  } */
