--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,13 @@
     --background-danger: #e82a00;
     --black: #000000;
     --red: #EE0000;
-    --green: #00FF7F;
-    --yellow: #FAFAD2;
+    --green: #00DD5F;
+    --yellow: #aaaa00;
     --blue: #6495ED;
     --magenta: #EE00EE;
-    --cyan: #00EEEE;
+    --cyan: #008888;
     --slateblue: #6D8BE8;
-    --plum: #AF99EF;
+    --plum: #8F29CF;
     --salmon: #FA8072;
     --white: #FFFFFF;
     --orange: #FF7700;
