--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ a {
 
 .section_title {
     border-bottom: 1px solid var(--text-primary);
-    width: 50%;
+    /* width: 50%; */
     font-size: medium;
 }
 
